# witter

./: .travis.yml  Cargo.toml  Makefile.toml
backend/: Cargo.toml  TODO.txt
backend/src/: clock.rs  env.rs  main.rs  middlewares.rs  responses.rs
backend/src/endpoints/: me.rs  mod.rs  tweets.rs  users.rs
backend/src/tests/: follows.rs  login.rs  logout.rs  mod.rs  posting_tweets.rs  test_helpers.rs  timeline.rs  user_creation.rs  users.rs
backend/src/tests/test_helpers/: test_db.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: api.rs  flash.rs  lib.rs  storage.rs
frontend/src/view/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  payloads.rs  responses.rs
witter-backend/: Cargo.toml  TODO.txt
witter-backend/src/: main.rs  middlewares.rs  responses.rs
witter-backend/src/endpoints/: mod.rs  users.rs
witter-backend/src/tests/: mod.rs  test_helpers.rs
witter-backend/src/tests/test_helpers/: test_db.rs
witter-frontend/: Cargo.toml
witter-frontend/src/: lib.rs
