[package]
name = "backend"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes", "unstable"] }
tide = "0.11"
sqlx = { version = "0.3", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15"
pretty_env_logger = "0.4"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1"
futures = { version = "0.3", features = ["compat"] }
rand = "0.7"
argonautica = "0.2"
failure = "0.1"
regex = "1"
lazy_static = "1"
shared = { path = "../shared", version = "0.1.0" }

[dev-dependencies]
assert-json-diff = { git = "https://github.com/davidpdrsn/assert-json-diff.git", branch = "accept-any-serializable" }
